--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -5,10 +5,20 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
-        android:scrollbars="vertical"
-        android:focusable="true"
-        android:clickable="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusable="true"
+        android:scrollbars="vertical" />
+
+    <ProgressBar
+        android:id="@+id/progress_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:layout_gravity="center"
+        android:scaleType="center"
+        android:src="@android:drawable/ic_menu_rotate"
+        android:visibility="gone" />
 
 </FrameLayout>
