--- a/app/src/main/res/layout/source_view.xml
+++ b/app/src/main/res/layout/source_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_view"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
     app:layout_constraintVertical_bias="0.5"
     tools:context=".sources.SourcesActivity">
@@ -16,10 +16,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:ellipsize="end"
         android:maxLines="2"
-        android:textAlignment="textStart"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
